# OpenPE

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  NOTICE  README.md  README_ko.md  README_zh.md  idea.md  pyproject.toml
.claude/: settings.json
.claude/agents/: analyst.md  arbiter.md  background-estimator.md  data-acquisition-agent.md  data-explorer.md  data-quality-agent.md  domain-reviewer.md  hypothesis-agent.md  lead-analyst.md  logic-reviewer.md  methods-reviewer.md  ml-specialist.md  note-writer.md  physics-reviewer.md  plot-validator.md  projector-agent.md  rendering-reviewer.md  report-writer.md  signal-lead.md  systematic-source-evaluator.md  systematics-fitter.md  theory-scout.md  verifier.md
.claude/hooks/: isolate.sh
_archive/agents/: detector-specialist.md  investigator.md
_ref/OpenViking-main/: .gitignore  pyproject.toml
_ref/acg_protocol-master/: .gitignore  README.md  Usage.md  requirements.txt
_ref/deer-flow-main/: CONTRIBUTING.md  Makefile  README.md  config.example.yaml
src/: scaffold_analysis.py
tests/: test_audit_trail.py  test_causal_discovery.py  test_causal_knowledge_graph.py  test_causal_pipeline.py  test_dag_utils.py  test_data_extractor.py  test_ep_engine.py  test_ep_visualization.py  test_experiment_logger.py  test_memory_store.py  test_projection.py  test_report_generator.py  test_scaffold.py  test_session_commit.py  test_sprint2_integration.py  test_sprint3_integration.py  test_sprint4_integration.py  test_sprint5_integration.py  test_sprint6_integration.py  test_state_manager.py  test_verification.py
(+402 files in other folders)
