[project]
name = "openpe"
version = "0.1.0"
description = "OpenPE — Principle to Endgame. LLM-driven first-principles analysis framework."
requires-python = ">=3.11"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.pypi-dependencies]
pyyaml = ">=6.0"
rich = ">=13.0"

[tool.pixi.tasks]
scaffold = "python src/scaffold_analysis.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "T201"]
